--- a/twitter/main/templates/registration/login.html
+++ b/twitter/main/templates/registration/login.html
@@ -12,7 +12,7 @@
 					{{form | crispy}}
 					<button type="submit" class="btn btn-outline-dark">submit</button>
 				</form>
-				<p>Don't have an account? <a href="{% url 'signup' %}">Click Here</a> to make one.</p>
+				<p>Don't have an account? <a href="">Click Here</a> to make one.</p>
 			</div>
 			<div class="col s2"></div>
 		</div>
